Change color palette

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,9 +1,9 @@
 :root
 {
-    --color1: #432344;
-    --color2: #e7eefb;
-    --color3: #ff2525;
-    --color4: #ffc03d;
+    --color1: #004aad;
+    --color2: #fff;
+    --color3: #EF476F;
+    --color4: #FFBA08;
     --font: 'Oxanium', cursive;
     --nav-size: 1.6rem;
 }
