--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -209,6 +209,7 @@ body
 .footer
 {
     display: flex;
+    justify-content: flex-start;
     padding: 10px;
     background-color: var(--color1);
     border: 0.5rem solid var(--color2);
