Add glow effect to my name

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -122,7 +122,7 @@ body
 @keyframes color-change 
 {
     0% { color: var(--color2); }
-    50% { color: var(--color3); }
+    50% { text-shadow: var(--color2) 0px 0px 5px, var(--color2) 0px 0px 10px, var(--color2) 0px 0px 15px, var(--color3) 0px 0px 20px, var(--color3) 0px 0px 30px, var(--color3) 0px 0px 40px, var(--color3) 0px 0px 50px, var(--color3) 0px 0px 75px; }
     100% { color: var(--color2); }
 }
 
