--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -70,6 +70,7 @@ body
     font-family: var(--font);
     font-size: 1.6rem;
     transition: background-color 0.25s;
+    text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
 }
 
 .header__a
