--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -69,8 +69,6 @@ body
     color: var(--color2);
     font-family: var(--font);
     font-size: 1.6rem;
-    transition: background-color 0.25s;
-    text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
 }
 
 .header__a
@@ -78,12 +76,14 @@ body
     text-decoration: none;
     padding: 10px 35px;
     display: inline-block;
-    color: white;;
+    color: white;
+    transition: color 0.5s;
+    text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
 }
 
 .header__a:hover
 {
-    background-color: var(--color3);
+    color: var(--color3);
 }
 
 .section
