--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -29,14 +29,14 @@ body
 
 .header
 {
-    background-color: var(--color1);
+    /* background-color: var(--color1); */
     display: flex;
     align-items: center;
     position: fixed;
     width: 100%;
-    box-shadow: 0px 5px 10px black;
+    /* box-shadow: 0px 5px 10px black; */
     z-index: 3;
-    border: 0.5rem solid var(--color2);
+    /* border: 0.5rem solid var(--color2); */
 }
 
 .header__nav
